--- a/utils/less/styles.less
+++ b/utils/less/styles.less
@@ -30,7 +30,8 @@ body {
 
 .background-image {
   //     background-image: url("../images/white-waves.png");
-  background-image: url("../image/trianglifyblue.png");
+  background-image: url("../image/4bce3i2.gif");
+  
   background-size: 100% 100%
   // background-repeat: no-repeat;
   
